--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>sso-app</module>
+      <module>sso-model</module>
+    <module>sso-dao</module>
+    <module>sso-controller</module>
+    <module>sso-service</module>
   </modules>
   <packaging>pom</packaging>
 
