--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>sso-dao</module>
     <module>sso-controller</module>
     <module>sso-service</module>
+    <module>sso-client</module>
   </modules>
   <packaging>pom</packaging>
 
