--- a/sso-client/src/main/resources/application.properties
+++ b/sso-client/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=sso-client
 server.port=1235
 
+oauthHost = http://localhost:1234
+clientId = sso-client
+myHost = http://localhost:1235/ssoClient/index
+
 #数据库配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
