--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>sso-controller</module>
     <module>sso-service</module>
     <module>sso-client</module>
+      <module>sso-resource</module>
   </modules>
   <packaging>pom</packaging>
 
