--- a/sso-resource/src/main/resources/application.properties
+++ b/sso-resource/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.application.name=sso-server
-server.port=1234
+spring.application.name=sso-sources
+server.port=1236
+
 
 #数据库配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
