--- a/sso-server/pom.xml
+++ b/sso-server/pom.xml
@@ -10,9 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tu.sso</groupId>
-    <artifactId>sso-controller</artifactId>
+    <artifactId>sso-server</artifactId>
 
-    <name>sso-controller</name>
+    <name>sso-server</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,15 +21,35 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>com.tu.sso</groupId>
-            <artifactId>sso-service</artifactId>
+            <artifactId>sso-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
     <build>
-
+       <resources>
+           <resource>
+               <directory>src/main/java</directory>
+               <includes>
+                   <include>**/*.xml</include>
+               </includes>
+           </resource>
+           <resource>
+               <directory>src/main/resources</directory>
+           </resource>
+       </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+
 </project>
