--- a/sso-client/src/main/resources/application.properties
+++ b/sso-client/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=sso-client
 server.port=1235
 
 oauthHost = http://localhost:1234
-clientId = sso-client
-myHost = http://localhost:1235/ssoClient/index
+clientId = ssoClient
+myHost = http://localhost:1235/ssoClient/authCodeCallback
 
 #数据库配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
