--- a/sso-resource/src/main/resources/application.properties
+++ b/sso-resource/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=sso-sources
 server.port=1236
 
+secur
+
 
 #数据库配置
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
