--- a/sso-resource/src/main/resources/application.properties
+++ b/sso-resource/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=sso-sources
 server.port=1236
 
-secur
+security.oauth2.client-id=ssoClient
+security.oauth2.client.client-secret=123456
+spring.security.oauth2.resourceserver.token-info-uri=http://localhost:1234/oauth/check_token
 
 
 #数据库配置
