--- a/sso-common/pom.xml
+++ b/sso-common/pom.xml
@@ -10,35 +10,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.tu.sso</groupId>
-    <artifactId>sso-model</artifactId>
+    <artifactId>sso-common</artifactId>
 
-    <name>sso-model</name>
+    <name>sso-common</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.tu.sso</groupId>
-            <artifactId>sso-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
-
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 </project>
