--- a/sso-server/src/main/resources/db.properties
+++ b/sso-server/src/main/resources/db.properties
@@ -1,7 +1,46 @@
-create table serve_client_info(
-id char(11) primary key,
-name varchar(50),
-host_url varchar(256),
-redirect_url varchar(256),
-secret varchar(60)
-)
+use helloworld;
+
+SET FOREIGN_KEY_CHECKS=0;
+
+DROP TABLE IF EXISTS `role`;
+CREATE TABLE `role` (
+`id` int(11) NOT NULL AUTO_INCREMENT,
+`role_name` varchar(255) DEFAULT NULL,
+`user_id` int(11) DEFAULT NULL,
+PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8;
+
+
+SET FOREIGN_KEY_CHECKS=0;
+
+
+DROP TABLE IF EXISTS `user`;
+CREATE TABLE `user` (
+`id` bigint(20) NOT NULL AUTO_INCREMENT,
+`user_name` varchar(255) DEFAULT NULL,
+`password` varchar(255) DEFAULT NULL,
+`real_name` varchar(255) DEFAULT NULL,
+PRIMARY KEY (`id`),
+KEY `user_index` (`id`) USING BTREE
+) ENGINE=InnoDB AUTO_INCREMENT=16 DEFAULT CHARSET=utf8 ROW_FORMAT=DYNAMIC COMMENT='用户基本信息表';
+
+
+SET FOREIGN_KEY_CHECKS=0;
+
+DROP TABLE IF EXISTS `auth_client_details`;
+CREATE TABLE `auth_client_details` (
+`id` int(11) NOT NULL,
+`clientId` varchar(255) NOT NULL,
+`clientSecret` varchar(255) DEFAULT NULL,
+`resourceIds` varchar(255) DEFAULT NULL,
+`scopes` varchar(255) DEFAULT NULL,
+`authorizedGrantTypes` varchar(255) DEFAULT NULL,
+`webServerRedirectUris` varchar(255) DEFAULT NULL,
+`authorities` varchar(255) DEFAULT NULL,
+`accessTokenValidity` varchar(255) DEFAULT NULL,
+`refreshTokenValidity` varchar(255) DEFAULT NULL,
+`additionalInformation` varchar(255) DEFAULT NULL,
+`autoApprove` varchar(255) DEFAULT NULL,
+`valid` tinyint(4) DEFAULT NULL,
+PRIMARY KEY (`clientId`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8;
