--- a/sso-server/src/main/resources/db.properties
+++ b/sso-server/src/main/resources/db.properties
@@ -37,10 +37,11 @@ CREATE TABLE `auth_client_details` (
 `authorizedGrantTypes` varchar(255) DEFAULT NULL,
 `webServerRedirectUris` varchar(255) DEFAULT NULL,
 `authorities` varchar(255) DEFAULT NULL,
-`accessTokenValidity` varchar(255) DEFAULT NULL,
-`refreshTokenValidity` varchar(255) DEFAULT NULL,
+`accessTokenValidity` int(11) DEFAULT NULL,
+`refreshTokenValidity` int(11) DEFAULT NULL,
 `additionalInformation` varchar(255) DEFAULT NULL,
 `autoApprove` varchar(255) DEFAULT NULL,
-`valid` tinyint(4) DEFAULT NULL,
 PRIMARY KEY (`clientId`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+
+INSERT INTO `auth_client_details` VALUES ('1', 'ssoClient', '123456', null, 'read,write,del,userinfo', 'authorization_code,refresh_token,password', 'http://localhost:1235/ssoClient/authCodeCallback', null, '1800', '1800', 'test', 'false');
