--- a/sso-resource/pom.xml
+++ b/sso-resource/pom.xml
@@ -25,6 +25,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.tu.sso</groupId>
+            <artifactId>sso-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
